--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
     <body>
         {{>header}}
         <main>
-            <p>Busca el tiempo que hace en una ciudad del mundo al alcance de tu mano</p>
+            <p id="introductio">Busca el tiempo que hace en una ciudad del mundo al alcance de tu mano</p>
             <div id="weather-form">
                 <form>
                     <input type="search">
