Fix data in weather info

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -26,7 +26,7 @@
                 <div id="data-weather">
                     <p>Clima: <span id="data-desc"></span ></p>
                     <p>Temperatura: <span id="data-temp"></span>ºC</p>
-                    <p>Probabilidad de lluvia: <span id="data-prec"></span>%</p>
+                    <p>Humedad: <span id="data-prec"></span>%</p>
                 </div>
             </div>
         </main>
