Add media query for 'About' view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,13 @@ img {
     margin-bottom: 1em;
 }
 
+ul {
+    margin: 2em 0em;
+}
+
+li {
+    margin: .5em 0em;
+}
 .navlink {
     color: white;
     font-weight: bold;
@@ -133,6 +140,9 @@ img {
         }
         #weather-form {
             margin: 0em;
+        }
+        #info {
+            padding: 0em 2em;
         }
     }
 }
