Replace 'help' view with 'about' view

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -3,6 +3,6 @@
     <div id="separator"></div>
 <nav>
     <a href="/" class="navlink"> Home</a>
-    <a href="/help" class="navlink">Help</a>
+    <a href="/about" class="navlink">About</a>
 </nav>
 </header>
